Prevent potential failures.  Clarify notebook plot label.

--- a/examples/cpVerifyBfk.ipynb
+++ b/examples/cpVerifyBfk.ipynb
@@ -720,7 +720,7 @@
     "        pf = np.polyfit(np.array(M)[mask], np.array(D)[mask], 2)\n",
     "        \n",
     "        plt.scatter(detStats['CATALOG']['MAGNITUDES'], detStats['CATALOG']['SIZE_DIFF'])\n",
-    "        plt.plot(XX, np.polyval(pf, XX), label=f\"numpy simple {pf}\")\n",
+    "        plt.plot(XX, np.polyval(pf, XX), label=f\"polynomial (N=2) {pf}\")\n",
     "        # plt.plot(XX, np.polyval(ZZ.x, XX), label=\"robust\")\n",
     "        plt.plot(XX, f(XX, *ZZ.x), label=f\"exponential {ZZ.x}\")\n",
     "        plt.ylim(-1, 5)\n",
