--- a/examples/cpVerifyPtcV2.ipynb
+++ b/examples/cpVerifyPtcV2.ipynb
@@ -5,23 +5,7 @@
    "execution_count": 1,
    "id": "7ba868f8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "WARNING: version mismatch between CFITSIO header (v4.000999999999999) and linked library (v4.01).\n",
-      "\n",
-      "\n",
-      "WARNING: version mismatch between CFITSIO header (v4.000999999999999) and linked library (v4.01).\n",
-      "\n",
-      "\n",
-      "WARNING: version mismatch between CFITSIO header (v4.000999999999999) and linked library (v4.01).\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -33,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "1f1a036e",
    "metadata": {},
    "outputs": [],
@@ -50,14 +34,14 @@
     "afwDisplay.setDefaultBackend(\"astrowidgets\")\n",
     "\n",
     "# Collection name containing the verification outputs. See DM-30171\n",
-    "verifyCollection = 'u/plazas/test-2022JUL28.lsstcomcam.1'\n",
+    "verifyCollection = \"u/plazas/DM-30171.PTC-verify-comcam.2022AUG04.2\" #'u/plazas/test-2022JUL28.lsstcomcam.1'\n",
     "# Collection name containign the PTC dataset\n",
-    "genCollection = 'u/plazas/2022JUL25-ptc.comcam.FULLCOV.1'"
+    "genCollection = \"u/plazas/2022AUG04-ptc.comcam.FULLCOV.1\" #'u/plazas/2022JUL25-ptc.comcam.FULLCOV.1'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "d893e570",
    "metadata": {},
    "outputs": [],
@@ -70,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "38a7a80a",
    "metadata": {},
    "outputs": [],
@@ -82,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "6ea08a9a-9a8b-4ad4-a74a-ce1d5cd429ec",
    "metadata": {},
    "outputs": [
@@ -92,7 +76,7 @@
        "False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "74325ab8-dd7c-4723-a984-0836a3396333",
    "metadata": {},
    "outputs": [
@@ -121,7 +105,7 @@
        " 'Detector 8': {'FAILURES': ['Detector 8 NOISE']}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "10e52009",
    "metadata": {
     "scrolled": true
@@ -159,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "c8bf1e72-5c7e-494a-a0ec-5abf786b129e",
    "metadata": {},
    "outputs": [
@@ -279,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "0fea4433",
    "metadata": {},
    "outputs": [
@@ -287,20 +271,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 {'AMP': {}, 'DET': {}, 'SUCCESS': False, 'VERIFY': {'NOISE': False}}\n",
-      "1 {'AMP': {}, 'DET': {}, 'SUCCESS': False, 'VERIFY': {'NOISE': False}}\n",
-      "2 {'AMP': {}, 'DET': {}, 'SUCCESS': False, 'VERIFY': {'NOISE': False}}\n",
-      "3 {'AMP': {}, 'DET': {}, 'SUCCESS': False, 'VERIFY': {'NOISE': False}}\n",
-      "4 {'AMP': {}, 'DET': {}, 'SUCCESS': False, 'VERIFY': {'NOISE': False}}\n",
-      "5 {'AMP': {}, 'DET': {}, 'SUCCESS': False, 'VERIFY': {'NOISE': False}}\n",
-      "6 {'AMP': {}, 'DET': {}, 'SUCCESS': False, 'VERIFY': {'NOISE': False}}\n",
-      "7 {'AMP': {}, 'DET': {}, 'SUCCESS': False, 'VERIFY': {'NOISE': False}}\n",
-      "8 {'AMP': {}, 'DET': {}, 'SUCCESS': False, 'VERIFY': {'NOISE': False}}\n"
+      "0 {'AMP': {'AMP_GAIN': 1.7, 'AMP_NOISE': 7.0, 'PTC_BFE_A00': -2.7094493066845765e-06, 'PTC_GAIN': 1.659065937346196, 'PTC_NOISE': -19.14084939342634, 'PTC_TURNOFF': 80418.09179669937}, 'DET': {}, 'SUCCESS': False, 'VERIFY': {'NOISE': False}}\n",
+      "1 {'AMP': {'AMP_GAIN': 1.7, 'AMP_NOISE': 7.0, 'PTC_BFE_A00': -2.902384549686015e-06, 'PTC_GAIN': 1.623751418026113, 'PTC_NOISE': -19.55367778179358, 'PTC_TURNOFF': 101333.30784931868}, 'DET': {}, 'SUCCESS': False, 'VERIFY': {'NOISE': False}}\n",
+      "2 {'AMP': {'AMP_GAIN': 1.7, 'AMP_NOISE': 7.0, 'PTC_BFE_A00': -1.2771249620825255e-06, 'PTC_GAIN': 1.6870916236876514, 'PTC_NOISE': 266.4984412851901, 'PTC_TURNOFF': 101633.86462699088}, 'DET': {}, 'SUCCESS': False, 'VERIFY': {'NOISE': False}}\n",
+      "3 {'AMP': {'AMP_GAIN': 1.7, 'AMP_NOISE': 7.0, 'PTC_BFE_A00': -7.460324586308793e-07, 'PTC_GAIN': 1.6994856974561325, 'PTC_NOISE': 543.4792995872186, 'PTC_TURNOFF': 102922.66592289903}, 'DET': {}, 'SUCCESS': False, 'VERIFY': {'NOISE': False}}\n",
+      "4 {'AMP': {'AMP_GAIN': 1.7, 'AMP_NOISE': 7.0, 'PTC_BFE_A00': -1.3232614291125133e-06, 'PTC_GAIN': 1.719617235619655, 'PTC_NOISE': 129.2134933233296, 'PTC_TURNOFF': 98649.96594202015}, 'DET': {}, 'SUCCESS': False, 'VERIFY': {'NOISE': False}}\n",
+      "5 {'AMP': {'AMP_GAIN': 1.7, 'AMP_NOISE': 7.0, 'PTC_BFE_A00': -2.391024101088044e-06, 'PTC_GAIN': 1.6900702652890491, 'PTC_NOISE': 268.55098844740724, 'PTC_TURNOFF': 84109.36508651824}, 'DET': {}, 'SUCCESS': False, 'VERIFY': {'NOISE': False}}\n",
+      "6 {'AMP': {'AMP_GAIN': 1.7, 'AMP_NOISE': 7.0, 'PTC_BFE_A00': -2.3254961597163368e-06, 'PTC_GAIN': 1.654609923346587, 'PTC_NOISE': 34.345879380458825, 'PTC_TURNOFF': 94908.0483323253}, 'DET': {}, 'SUCCESS': False, 'VERIFY': {'NOISE': False}}\n",
+      "7 {'AMP': {'AMP_GAIN': 1.7, 'AMP_NOISE': 7.0, 'PTC_BFE_A00': -2.044037820961727e-06, 'PTC_GAIN': 1.6653706566862387, 'PTC_NOISE': 51.559091617628845, 'PTC_TURNOFF': 82495.55686934211}, 'DET': {}, 'SUCCESS': False, 'VERIFY': {'NOISE': False}}\n",
+      "8 {'AMP': {'AMP_GAIN': 1.7, 'AMP_NOISE': 7.0, 'PTC_BFE_A00': -2.1484514311733664e-06, 'PTC_GAIN': 1.6739897397425216, 'PTC_NOISE': 87.91558394225068, 'PTC_TURNOFF': 84110.28114536374}, 'DET': {}, 'SUCCESS': False, 'VERIFY': {'NOISE': False}}\n"
      ]
     }
    ],
    "source": [
-    "# Det stats\n",
+    "# Gain, noise, turnoff, and a00 values are saved as 'AMP' statistics\n",
+    "# The noise values from the fit are not very good, providing insight into why the NOISE \n",
+    "# tests failed. \n",
     "for detId in range(numberDetectors):\n",
     "    detStats = butler.get(\"verifyPtcDetStats\", instrument=\"LSSTComCam\", detector=detId)\n",
     "    print (detId, detStats)"
@@ -517,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
