--- a/examples/cpVerifyFlat.ipynb
+++ b/examples/cpVerifyFlat.ipynb
@@ -6,11 +6,11 @@
    "id": "8aa75eb3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-13T22:28:00.980384Z",
-     "iopub.status.busy": "2023-01-13T22:28:00.980050Z",
-     "iopub.status.idle": "2023-01-13T22:28:03.049149Z",
-     "shell.execute_reply": "2023-01-13T22:28:03.048491Z",
-     "shell.execute_reply.started": "2023-01-13T22:28:00.980364Z"
+     "iopub.execute_input": "2023-01-13T23:38:34.683879Z",
+     "iopub.status.busy": "2023-01-13T23:38:34.683610Z",
+     "iopub.status.idle": "2023-01-13T23:38:36.745028Z",
+     "shell.execute_reply": "2023-01-13T23:38:36.744467Z",
+     "shell.execute_reply.started": "2023-01-13T23:38:34.683859Z"
     },
     "scrolled": true,
     "tags": []
@@ -27,20 +27,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "84dccd11",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-13T22:34:10.757323Z",
-     "iopub.status.busy": "2023-01-13T22:34:10.756558Z",
-     "iopub.status.idle": "2023-01-13T22:34:10.781519Z",
-     "shell.execute_reply": "2023-01-13T22:34:10.781039Z",
-     "shell.execute_reply.started": "2023-01-13T22:34:10.757299Z"
+     "iopub.execute_input": "2023-01-13T23:38:36.746447Z",
+     "iopub.status.busy": "2023-01-13T23:38:36.745753Z",
+     "iopub.status.idle": "2023-01-13T23:38:37.376040Z",
+     "shell.execute_reply": "2023-01-13T23:38:37.375536Z",
+     "shell.execute_reply.started": "2023-01-13T23:38:36.746427Z"
     },
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recieved exception name 'astrowidgets' is not defined while loading astrowidgets.  Disabling display.\n"
+     ]
+    }
+   ],
    "source": [
     "# This cell should be edited to match the data to be inspected.\n",
     "\n",
@@ -51,8 +59,14 @@
     "cameraName = 'LATISS'\n",
     "\n",
     "# Set which display to use.\n",
-    "afwDisplay.setDefaultBackend(\"astrowidgets\")\n",
-    "\n",
+    "haveDisplay=True\n",
+    "try:\n",
+    "    afwDisplay.setDefaultBackend(\"astrowidgets\")\n",
+    "    display = afwDisplay.Display(dims=(1000, 1000))\n",
+    "except Exception as e:\n",
+    "    haveDisplay=False\n",
+    "    print(f\"Recieved exception {e} while loading astrowidgets.  Disabling display.\")\n",
+    "    \n",
     "# Collection that the calibration was constructed in.\n",
     "genCollection = 'LATISS/calib/DM-37587/flatGen-BG40.20230113a'\n",
     "# Collection name containing the verification outputs.\n",
@@ -65,11 +79,11 @@
    "id": "01855373",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-13T22:28:03.702935Z",
-     "iopub.status.busy": "2023-01-13T22:28:03.702271Z",
-     "iopub.status.idle": "2023-01-13T22:28:04.741759Z",
-     "shell.execute_reply": "2023-01-13T22:28:04.741131Z",
-     "shell.execute_reply.started": "2023-01-13T22:28:03.702916Z"
+     "iopub.execute_input": "2023-01-13T23:38:37.377413Z",
+     "iopub.status.busy": "2023-01-13T23:38:37.376717Z",
+     "iopub.status.idle": "2023-01-13T23:38:38.388208Z",
+     "shell.execute_reply": "2023-01-13T23:38:38.387585Z",
+     "shell.execute_reply.started": "2023-01-13T23:38:37.377389Z"
     },
     "scrolled": true,
     "tags": []
@@ -106,11 +120,11 @@
    "id": "3311216b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-13T22:28:04.744560Z",
-     "iopub.status.busy": "2023-01-13T22:28:04.744140Z",
-     "iopub.status.idle": "2023-01-13T22:28:04.762877Z",
-     "shell.execute_reply": "2023-01-13T22:28:04.762356Z",
-     "shell.execute_reply.started": "2023-01-13T22:28:04.744540Z"
+     "iopub.execute_input": "2023-01-13T23:38:38.389208Z",
+     "iopub.status.busy": "2023-01-13T23:38:38.389032Z",
+     "iopub.status.idle": "2023-01-13T23:38:38.423988Z",
+     "shell.execute_reply": "2023-01-13T23:38:38.423457Z",
+     "shell.execute_reply.started": "2023-01-13T23:38:38.389190Z"
     },
     "scrolled": true,
     "tags": []
@@ -128,11 +142,11 @@
    "id": "dd1060da",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-13T22:28:04.777532Z",
-     "iopub.status.busy": "2023-01-13T22:28:04.777381Z",
-     "iopub.status.idle": "2023-01-13T22:28:04.780810Z",
-     "shell.execute_reply": "2023-01-13T22:28:04.780308Z",
-     "shell.execute_reply.started": "2023-01-13T22:28:04.777516Z"
+     "iopub.execute_input": "2023-01-13T23:38:38.425062Z",
+     "iopub.status.busy": "2023-01-13T23:38:38.424677Z",
+     "iopub.status.idle": "2023-01-13T23:38:38.428361Z",
+     "shell.execute_reply": "2023-01-13T23:38:38.427859Z",
+     "shell.execute_reply.started": "2023-01-13T23:38:38.425044Z"
     },
     "scrolled": true,
     "tags": []
@@ -162,11 +176,11 @@
    "id": "3100554b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-13T22:28:04.781757Z",
-     "iopub.status.busy": "2023-01-13T22:28:04.781439Z",
-     "iopub.status.idle": "2023-01-13T22:28:04.785015Z",
-     "shell.execute_reply": "2023-01-13T22:28:04.784458Z",
-     "shell.execute_reply.started": "2023-01-13T22:28:04.781739Z"
+     "iopub.execute_input": "2023-01-13T23:38:38.429394Z",
+     "iopub.status.busy": "2023-01-13T23:38:38.428968Z",
+     "iopub.status.idle": "2023-01-13T23:38:38.432713Z",
+     "shell.execute_reply": "2023-01-13T23:38:38.432225Z",
+     "shell.execute_reply.started": "2023-01-13T23:38:38.429377Z"
     },
     "scrolled": true,
     "tags": []
@@ -190,11 +204,11 @@
    "id": "75d651bc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-13T22:28:04.786098Z",
-     "iopub.status.busy": "2023-01-13T22:28:04.785680Z",
-     "iopub.status.idle": "2023-01-13T22:28:05.420579Z",
-     "shell.execute_reply": "2023-01-13T22:28:05.419979Z",
-     "shell.execute_reply.started": "2023-01-13T22:28:04.786080Z"
+     "iopub.execute_input": "2023-01-13T23:38:38.433777Z",
+     "iopub.status.busy": "2023-01-13T23:38:38.433335Z",
+     "iopub.status.idle": "2023-01-13T23:38:39.022144Z",
+     "shell.execute_reply": "2023-01-13T23:38:39.021518Z",
+     "shell.execute_reply.started": "2023-01-13T23:38:38.433760Z"
     },
     "scrolled": true,
     "tags": []
@@ -232,11 +246,11 @@
    "id": "c465804b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-13T22:28:05.436297Z",
-     "iopub.status.busy": "2023-01-13T22:28:05.436143Z",
-     "iopub.status.idle": "2023-01-13T22:28:15.671226Z",
-     "shell.execute_reply": "2023-01-13T22:28:15.670533Z",
-     "shell.execute_reply.started": "2023-01-13T22:28:05.436282Z"
+     "iopub.execute_input": "2023-01-13T23:38:39.023062Z",
+     "iopub.status.busy": "2023-01-13T23:38:39.022886Z",
+     "iopub.status.idle": "2023-01-13T23:39:39.858452Z",
+     "shell.execute_reply": "2023-01-13T23:39:39.857782Z",
+     "shell.execute_reply.started": "2023-01-13T23:38:39.023044Z"
     },
     "tags": []
    },
@@ -307,11 +321,11 @@
    "id": "1353bf0f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-13T22:28:17.911439Z",
-     "iopub.status.busy": "2023-01-13T22:28:17.911027Z",
-     "iopub.status.idle": "2023-01-13T22:28:23.410413Z",
-     "shell.execute_reply": "2023-01-13T22:28:23.409778Z",
-     "shell.execute_reply.started": "2023-01-13T22:28:17.911414Z"
+     "iopub.execute_input": "2023-01-13T23:39:39.859556Z",
+     "iopub.status.busy": "2023-01-13T23:39:39.859233Z",
+     "iopub.status.idle": "2023-01-13T23:39:41.921192Z",
+     "shell.execute_reply": "2023-01-13T23:39:41.920529Z",
+     "shell.execute_reply.started": "2023-01-13T23:39:39.859537Z"
     },
     "tags": []
    },
@@ -376,82 +390,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "2de1cdef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-13T22:34:18.876284Z",
-     "iopub.status.busy": "2023-01-13T22:34:18.876047Z",
-     "iopub.status.idle": "2023-01-13T22:34:18.909509Z",
-     "shell.execute_reply": "2023-01-13T22:34:18.908882Z",
-     "shell.execute_reply.started": "2023-01-13T22:34:18.876266Z"
+     "iopub.execute_input": "2023-01-13T23:39:41.922280Z",
+     "iopub.status.busy": "2023-01-13T23:39:41.921936Z",
+     "iopub.status.idle": "2023-01-13T23:39:41.925203Z",
+     "shell.execute_reply": "2023-01-13T23:39:41.924572Z",
+     "shell.execute_reply.started": "2023-01-13T23:39:41.922262Z"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "Device matplotlib has no attribute \"embed\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "File \u001b[0;32m/opt/lsst/software/stack/stack/miniconda3-py38_4.9.2-5.1.0/Linux64/afw/ge014ce090d+e67ccb3675/python/lsst/afw/display/interface.py:233\u001b[0m, in \u001b[0;36mDisplay.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    232\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 233\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mgetattr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_impl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    234\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m:\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DisplayImpl' object has no attribute 'embed'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [13]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m display \u001b[38;5;241m=\u001b[39m afwDisplay\u001b[38;5;241m.\u001b[39mDisplay(dims\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m1000\u001b[39m, \u001b[38;5;241m1000\u001b[39m))\n\u001b[0;32m----> 2\u001b[0m \u001b[43mdisplay\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43membed\u001b[49m()\n",
-      "File \u001b[0;32m/opt/lsst/software/stack/stack/miniconda3-py38_4.9.2-5.1.0/Linux64/afw/ge014ce090d+e67ccb3675/python/lsst/afw/display/interface.py:235\u001b[0m, in \u001b[0;36mDisplay.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    233\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_impl, name)\n\u001b[1;32m    234\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m:\n\u001b[0;32m--> 235\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\n\u001b[1;32m    236\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDevice \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m has no attribute \u001b[39m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: Device matplotlib has no attribute \"embed\""
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "display = afwDisplay.Display(dims=(1000, 1000))\n",
-    "display.embed()"
+    "if haveDisplay:\n",
+    "    display.embed()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "7e3ddfb0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-13T22:34:21.151315Z",
-     "iopub.status.busy": "2023-01-13T22:34:21.150897Z",
-     "iopub.status.idle": "2023-01-13T22:34:35.202369Z",
-     "shell.execute_reply": "2023-01-13T22:34:35.201698Z",
-     "shell.execute_reply.started": "2023-01-13T22:34:21.151294Z"
+     "iopub.execute_input": "2023-01-13T23:39:41.926700Z",
+     "iopub.status.busy": "2023-01-13T23:39:41.926246Z",
+     "iopub.status.idle": "2023-01-13T23:39:42.048522Z",
+     "shell.execute_reply": "2023-01-13T23:39:42.047154Z",
+     "shell.execute_reply.started": "2023-01-13T23:39:41.926681Z"
     },
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Detector: RXX_S00 Median: 0.9984542727470398   Stdev: 0.02772425889968872\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "flat RXX_S00 Continue? [h, c, q, p, #] q\n"
+     "ename": "AssertionError",
+     "evalue": "Please set up a display and set ``haveDisplay`` to true to run this cell.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [11]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# View calibration images:\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m haveDisplay \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlease set up a display and set ``haveDisplay`` to true to run this cell.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      4\u001b[0m continueDisplay \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m detector \u001b[38;5;129;01min\u001b[39;00m camera:\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Please set up a display and set ``haveDisplay`` to true to run this cell."
      ]
     }
    ],
    "source": [
     "# View calibration images:\n",
+    "assert haveDisplay is True, \"Please set up a display and set ``haveDisplay`` to true to run this cell.\"\n",
+    "\n",
     "continueDisplay = True\n",
     "for detector in camera:\n",
     "    detectorId = detector.getId()\n",
@@ -473,30 +460,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "0d97491f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-13T22:34:40.220658Z",
-     "iopub.status.busy": "2023-01-13T22:34:40.220404Z",
-     "iopub.status.idle": "2023-01-13T22:34:50.739728Z",
-     "shell.execute_reply": "2023-01-13T22:34:50.739192Z",
-     "shell.execute_reply.started": "2023-01-13T22:34:40.220639Z"
+     "iopub.execute_input": "2023-01-13T23:39:47.865210Z",
+     "iopub.status.busy": "2023-01-13T23:39:47.864886Z",
+     "iopub.status.idle": "2023-01-13T23:39:47.882368Z",
+     "shell.execute_reply": "2023-01-13T23:39:47.881702Z",
+     "shell.execute_reply.started": "2023-01-13T23:39:47.865190Z"
     },
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "2023011200107 RXX_S00 Continue? [h, c, q, p, #] \n",
-      "2023011200108 RXX_S00 Continue? [h, c, q, p, #] q\n"
+     "ename": "AssertionError",
+     "evalue": "Please set up a display and set ``haveDisplay`` to true to run this cell.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# This block allows the residual images to be scanned for concerns.\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m haveDisplay \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlease set up a display and set ``haveDisplay`` to true to run this cell.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      4\u001b[0m blinkResiduals \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m blinkResiduals:\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Please set up a display and set ``haveDisplay`` to true to run this cell."
      ]
     }
    ],
    "source": [
     "# This block allows the residual images to be scanned for concerns.\n",
+    "assert haveDisplay is True, \"Please set up a display and set ``haveDisplay`` to true to run this cell.\"\n",
+    "\n",
     "blinkResiduals = True\n",
     "if blinkResiduals:\n",
     "    continueDisplay = True\n",
@@ -524,7 +516,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7da7cc53",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.status.busy": "2023-01-13T23:39:42.050422Z",
+     "iopub.status.idle": "2023-01-13T23:39:42.054209Z",
+     "shell.execute_reply": "2023-01-13T23:39:42.054093Z",
+     "shell.execute_reply.started": "2023-01-13T23:39:42.054082Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Additional cells follow here."
@@ -533,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b9cc53c",
+   "id": "a014b34a-e7fe-4e64-96ac-cc0df4186a21",
    "metadata": {},
    "outputs": [],
    "source": []
