--- a/notebooks/cpVerifyBfk.ipynb
+++ b/notebooks/cpVerifyBfk.ipynb
@@ -40,6 +40,7 @@
     "# Which calibration type to analyse.\n",
     "calibType = 'bfk'\n",
     "detectorNumber = 0\n",
+    "exposureNumber = 2021021700347\n",
     "\n",
     "# Which camera the calibration is for.\n",
     "cameraName = 'LATISS'\n",
@@ -79,9 +80,11 @@
    "source": [
     "# Get the calibrations.\n",
     "bfk = butler.get(calibType, instrument=cameraName, detector=detectorNumber,\n",
-    "                 collection=genCollection)\n",
+    "                 exposure=exposureNumber,\n",
+    "                 collections=genCollection)\n",
     "ptc = butler.get('ptc', instrument=cameraName, detector=detectorNumber,\n",
-    "                 collection=ptcCollection)"
+    "                 exposure=exposureNumber,\n",
+    "                 collections=ptcCollection)"
    ]
   },
   {
@@ -115,7 +118,7 @@
    "outputs": [],
    "source": [
     "# Plot raw cross-correlation values\n",
-    "inputSelection = 11\n",
+    "inputSelection = 1\n",
     "iterator = 0\n",
     "fig, axes = plt.subplots(nrows=4, ncols=4,\n",
     "                         sharex=True, sharey=False, figsize=[8.0, 8.0], \n",
