--- a/notebooks/cpVerifyLinearity.ipynb
+++ b/notebooks/cpVerifyLinearity.ipynb
@@ -77,10 +77,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "linA = butler.get('linearity', instrument=cameraName, detector=detectorNumber, \n",
+    "linA = butler.get('linearizer', instrument=cameraName, detector=detectorNumber, \n",
     "                  collections=genCollection)\n",
-    "linB = butler.get('linearity', instrument=cameraName, detector=detectorNumber, \n",
+    "linB = butler.get('linearizer', instrument=cameraName, detector=detectorNumber, \n",
     "                  collections=genCollection2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc9ab56d-9229-46c6-9637-514ab32da290",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vlinA = butler.get('linearizer', instrument=cameraName, detector=detectorNumber, \n",
+    "                   collections=verifyCollection)\n",
+    "vlinB = butler.get('linearizer', instrument=cameraName, detector=detectorNumber, \n",
+    "                   collections=verifyCollection2)"
    ]
   },
   {
