Fix errors; update parameters\ comment.

--- a/notebooks/cpVerifyBfk.ipynb
+++ b/notebooks/cpVerifyBfk.ipynb
@@ -30,7 +30,9 @@
    "source": [
     "# This cell contains parameters that can be automatically set via the papermill package.\n",
     "# Examples:\n",
+    "#  Update parameters in input.ipynb, writing output.ipynb, but do not execute:\n",
     "#   papermill --prepare-only -p calibType newBias -p cameraName LSSTCam <input> <output>\n",
+    "#  Disable interactive cells in input.ipynb, execute it, and write output.ipynb.\n",
     "#   papermill -p interactive False <input> <output>\n",
     "interactive = True\n",
     "\n",
