--- a/notebooks/cpVerifyPtcV2.ipynb
+++ b/notebooks/cpVerifyPtcV2.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7ba868f8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -28,7 +30,9 @@
    "source": [
     "# This cell contains parameters that can be automatically set via the papermill package.\n",
     "# Examples:\n",
+    "#  Update parameters in input.ipynb, writing output.ipynb, but do not execute:\n",
     "#   papermill --prepare-only -p calibType newBias -p cameraName LSSTCam <input> <output>\n",
+    "#  Disable interactive cells in input.ipynb, execute it, and write output.ipynb.\n",
     "#   papermill -p interactive False <input> <output>\n",
     "interactive = True\n",
     "\n",
@@ -37,26 +41,28 @@
     "\n",
     "# Which calibration type to analyse.\n",
     "calibType = 'ptc'\n",
-    "exposureNumber = 2022021800078\n",
+    "exposureNumber = 2022050500251\n",
     "\n",
     "# Which camera the calibration is for.\n",
-    "cameraName = 'LSSTComCam'\n",
+    "cameraName = 'LATISS'\n",
     "\n",
     "# Which display to use.\n",
     "displayBackend = 'matplotlib'\n",
     "\n",
     "# Which collection the calibration was constructed in.\n",
-    "genCollection = 'u/plazas/2022AUG04-ptc.comcam.FULLCOV.1'\n",
+    "genCollection = 'u/plazas/2022JUL15-ptc_20220505.1'\n",
     "\n",
     "# Which collection containing the verification outputs.\n",
-    "verifyCollection = 'u/plazas/DM-30171.PTC-verify-comcam.2022AUG04.2'"
+    "verifyCollection = 'u/plazas/test-2022JUL26.8'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d893e570",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Get butler and camera\n",
@@ -70,7 +76,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "38a7a80a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Get Run Statistics\n",
@@ -83,7 +91,8 @@
    "execution_count": null,
    "id": "10e52009",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -95,7 +104,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c8bf1e72-5c7e-494a-a0ec-5abf786b129e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Noise failed, let's look at the values\n",
@@ -121,7 +132,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0fea4433",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Gain, noise, turnoff, and a00 values are saved as 'AMP' statistics\n",
@@ -136,25 +149,37 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d753ba5d-e396-43f7-97c3-03c7db5bcdfb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Plot PTCs\n",
     "if interactive:\n",
-    "    for detId in range(numberDetectors): \n",
+    "    for detId in range(numberDetectors):\n",
+    "        detector = camera[detId]\n",
     "        ptc = butler.get('ptc', instrument=cameraName, detector=detId)\n",
     "        continueDisplay=True\n",
     "        for amp in np.unique(ptc.ampNames):\n",
     "            plt.scatter(ptc.rawMeans[amp], ptc.rawVars[amp], marker='o', label=\"PTC-raw\")\n",
     "            plt.scatter(ptc.finalMeans[amp], ptc.finalVars[amp], marker='+', label=\"PTC\")\n",
+    "            plt.title(f\"{detector.getName()} {amp}\")\n",
     "            plt.show()\n",
-    "            continueDisplay, skipNumber = utils.interactiveBlock(f\"{exposureId} {detector.getName()}\", \n",
+    "            continueDisplay, skipNumber = utils.interactiveBlock(f\"{exposureNumber} {detector.getName()}\", \n",
     "                                                                 detStats)\n",
     "            if continueDisplay is False:\n",
     "                break\n",
-    "    if continueDisplay is False:\n",
-    "        break"
+    "        if continueDisplay is False:\n",
+    "            break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27558164-d996-4790-8980-4988b0f4313e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
