--- a/notebooks/cpVerifyPtcWithLinearity.ipynb
+++ b/notebooks/cpVerifyPtcWithLinearity.ipynb
@@ -28,7 +28,9 @@
    "source": [
     "# This cell contains parameters that can be automatically set via the papermill package.\n",
     "# Examples:\n",
+    "#  Update parameters in input.ipynb, writing output.ipynb, but do not execute:\n",
     "#   papermill --prepare-only -p calibType newBias -p cameraName LSSTCam <input> <output>\n",
+    "#  Disable interactive cells in input.ipynb, execute it, and write output.ipynb.\n",
     "#   papermill -p interactive False <input> <output>\n",
     "interactive = True\n",
     "\n",
@@ -61,14 +63,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "01855373",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Get butler and camera\n",
     "butler = dB.Butler(repository, collections=[genCollection, genCollection2, \n",
     "                                            originalGenCollection, \n",
     "                                            originalGenCollection2])\n",
-    "camera = butler.get('camera', instrument=cameraName)"
+    "camera = butler.get('camera', instrument=cameraName)\n",
+    "detector = camera[detectorNumber]"
    ]
   },
   {
@@ -112,7 +117,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ff8eb436",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# View plots.\n",
@@ -127,7 +134,7 @@
     "    \n",
     "        plt.scatter(ptcOA.finalMeans[amp], ptcOA.finalVars[amp], marker='<', label=\"PTCA\")\n",
     "        plt.scatter(ptcOB.finalMeans[amp], ptcOB.finalVars[amp], marker='>', label='PTCB')\n",
-    "\n",
+    "        plt.title(f\"{detector.getName()} {amp}\")\n",
     "        plt.show()\n",
     "    \n",
     "        continueDisplay, skipNumber = utils.interactiveBlock(f\"{calibType} {detector.getName()}\", \n",
