--- a/notebooks/cpVerifyDefects.ipynb
+++ b/notebooks/cpVerifyDefects.ipynb
@@ -29,7 +29,9 @@
    "source": [
     "# This cell contains parameters that can be automatically set via the papermill package.\n",
     "# Examples:\n",
+    "#  Update parameters in input.ipynb, writing output.ipynb, but do not execute:\n",
     "#   papermill --prepare-only -p calibType newBias -p cameraName LSSTCam <input> <output>\n",
+    "#  Disable interactive cells in input.ipynb, execute it, and write output.ipynb.\n",
     "#   papermill -p interactive False <input> <output>\n",
     "interactive = True\n",
     "\n",
@@ -116,7 +118,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d2970a6f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# View calibration images:\n",
@@ -136,7 +140,7 @@
     "        sigma = 0.74 * (q75 - q25)\n",
     "        print(f\"Detector: {detector.getName()} Median: {q50}   Stdev: {sigma}\")\n",
     "    \n",
-    "        display.mtv(calib)\n",
+    "        display.mtv(realization)\n",
     "        display._scale('linear', (q50 - 3.0 * sigma), (q50 + 3.0* sigma), \"\")\n",
     "\n",
     "        continueDisplay, skipNumber = utils.interactiveBlock(f\"{calibType} {detector.getName()}\", \n",
