--- a/notebooks/cpVerifyPtc.ipynb
+++ b/notebooks/cpVerifyPtc.ipynb
@@ -28,7 +28,9 @@
    "source": [
     "# This cell contains parameters that can be automatically set via the papermill package.\n",
     "# Examples:\n",
+    "#  Update parameters in input.ipynb, writing output.ipynb, but do not execute:\n",
     "#   papermill --prepare-only -p calibType newBias -p cameraName LSSTCam <input> <output>\n",
+    "#  Disable interactive cells in input.ipynb, execute it, and write output.ipynb.\n",
     "#   papermill -p interactive False <input> <output>\n",
     "interactive = True\n",
     "\n",
@@ -69,20 +71,25 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "486dabee",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "ptcA = butler.get('ptc', instrument=cameraName, detector=detectorNumber,\n",
     "                  collections=genCollection)\n",
     "ptcB = butler.get('ptc', instrument=cameraName, detector=detectorNumber,\n",
-    "                  collections=genCollection2)"
+    "                  collections=genCollection2)\n",
+    "detector = camera[detectorNumber]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "ff8eb436",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "if interactive:\n",
@@ -92,8 +99,8 @@
     "        plt.scatter(ptcA.finalMeans[amp], ptcA.finalVars[amp], marker='+', label=\"PTCA\")\n",
     "        plt.scatter(ptcB.finalMeans[amp], ptcB.finalVars[amp], marker='x', label='PTCB')\n",
     "        plt.show()\n",
-    "        continueDisplay, skipNumber = utils.interactiveBlock(f\"{exposureId} {detector.getName()}\", \n",
-    "                                                                 detStats)\n",
+    "        continueDisplay, skipNumber = utils.interactiveBlock(f\"{detector.getName()}\", \n",
+    "                                                                 {})\n",
     "        if continueDisplay is False:\n",
     "            break"
    ]
