Fix indexing errors for crosstalk calib.

--- a/notebooks/cpVerifyCrosstalk.ipynb
+++ b/notebooks/cpVerifyCrosstalk.ipynb
@@ -331,15 +331,15 @@
     "            sourceIt = ordering.index(sourceAmp)\n",
     "            targetIt = ordering.index(targetAmp)\n",
     "        \n",
-    "            CTmean = crosstalk.coeffs[targetIt][sourceIt]\n",
-    "            CTerr = crosstalk.coeffErr[targetIt][sourceIt]\n",
-    "            CTN = crosstalk.coeffNum[targetIt][sourceIt]\n",
-    "            CTValid = crosstalk.coeffValid[targetIt][sourceIt]\n",
+    "            CTmean = crosstalk.coeffs[sourceIt][targetIt]\n",
+    "            CTerr = crosstalk.coeffErr[sourceIt][targetIt]\n",
+    "            CTN = crosstalk.coeffNum[sourceIt][targetIt]\n",
+    "            CTValid = crosstalk.coeffValid[sourceIt][targetIt]\n",
     "        \n",
-    "            CTResidMean = residualCrosstalk.coeffs[targetIt][sourceIt]\n",
-    "            CTResidErr = residualCrosstalk.coeffErr[targetIt][sourceIt]\n",
-    "            CTResidN = residualCrosstalk.coeffNum[targetIt][sourceIt]\n",
-    "            CTResidValid = residualCrosstalk.coeffValid[targetIt][sourceIt]\n",
+    "            CTResidMean = residualCrosstalk.coeffs[sourceIt][targetIt]\n",
+    "            CTResidErr = residualCrosstalk.coeffErr[sourceIt][targetIt]\n",
+    "            CTResidN = residualCrosstalk.coeffNum[sourceIt][targetIt]\n",
+    "            CTResidValid = residualCrosstalk.coeffValid[sourceIt][targetIt]\n",
     "        \n",
     "            residualValues = residualSet[targetAmp][sourceAmp]\n",
     "            nBin = int(len(values)) if cdf else 25\n",
@@ -404,8 +404,8 @@
     "            sourceIt = ordering.index(sourceAmp)\n",
     "            targetIt = ordering.index(targetAmp)\n",
     "        \n",
-    "            CTmean = crosstalk.coeffs[targetIt][sourceIt]\n",
-    "            CTerr = crosstalk.coeffErr[targetIt][sourceIt]\n",
+    "            CTmean = crosstalk.coeffs[sourceIt][targetIt]\n",
+    "            CTerr = crosstalk.coeffErr[sourceIt][targetIt]\n",
     "\n",
     "            if sourceAmp == targetAmp:\n",
     "                axes[axTuple].plot([0.0], [0.0])\n",
@@ -443,8 +443,8 @@
     "        sourceIt = ordering.index(sourceAmp)\n",
     "        targetIt = ordering.index(target)\n",
     "        \n",
-    "        CTmean = crosstalk.coeffs[targetIt][sourceIt]\n",
-    "        CTerr = crosstalk.coeffErr[targetIt][sourceIt]\n",
+    "        CTmean = crosstalk.coeffs[sourceIt][targetIt]\n",
+    "        CTerr = crosstalk.coeffErr[sourceIt][targetIt]\n",
     "        axes[ii].set_xlim(0.0 * 70000, 130000)\n",
     "        axes[ii].set_ylim(-5e-4, 5e-4)\n",
     "        axes[ii].scatter(fluxSet[sourceAmp], \n",
@@ -547,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
